completed login page (farishhta)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         <div class="form__section">
           <div class="login__header">
             <h1>Login</h1>
-            <p>Doesn't have an account yet? <span>Sign Up</span></p>
+            <p>
+              Doesn't have an account yet?
+              <span
+                ><a href="#" style="color: var(--primary-color)">
+                  Sign Up</a
+                ></span
+              >
+            </p>
           </div>
           <div class="login__form">
             <form action="/" method="post" class="form">
@@ -34,7 +41,11 @@
               <div class="login__input">
                 <div class="password__div">
                   <h3>Password</h3>
-                  <span>Forgot Password?</span>
+                  <span
+                    ><a href="#" style="color: var(--primary-color)">
+                      Forgot Password?</a
+                    ></span
+                  >
                 </div>
                 <input
                   type="password"
